feat: implement user login endpoint with JWT generation

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 DATABASE_URL="postgresql://user_equizz:password_equizz@localhost:5432/db_equizz"
+JWT_SECRET= "VOUS_NE_DEVINEREZ_JAMAIS_LE_MOT_DE_PASSE_POUR_CE_PROJET"
